[gd_scene load_steps=20 format=3 uid="uid://tbhrrj3nihxl"]

[ext_resource type="Script" uid="uid://c4drvv47awrj0" path="res://scripts/character.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://4rau8u2274ol" path="res://scripts/input_handler.gd" id="2_g2els"]
[ext_resource type="Script" uid="uid://bav3sxpcv1ott" path="res://scripts/state_machine.gd" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://c10trtjcqrrl5" path="res://scripts/states/IdleState.gd" id="3_tuyoq"]
[ext_resource type="Script" uid="uid://bpbouw2s5yiq5" path="res://scripts/kitsune.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://ce74eo32vvbgb" path="res://scripts/states/JumpingState.gd" id="4_smehm"]
[ext_resource type="Script" uid="uid://dgwvt61msxw4g" path="res://scripts/human.gd" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://cy8bt5yaela0k" path="res://scripts/states/MovingState.gd" id="5_ur7pv"]
[ext_resource type="Script" uid="uid://ctq5bg5yveiv" path="res://scripts/states/FallingState.gd" id="6_ur7pv"]
[ext_resource type="Script" uid="uid://dij83j8t62cge" path="res://scripts/states/DashingState.gd" id="7_y4r1p"]
[ext_resource type="Script" uid="uid://7pg2wf203o5n" path="res://scripts/states/SprintingState.gd" id="8_d2wvv"]
[ext_resource type="Script" uid="uid://cepkc74a3tp5y" path="res://scripts/states/SwappingState.gd" id="9_3v2ag"]
[ext_resource type="Script" uid="uid://ulp3c2r8ekfd" path="res://scripts/states/DoubleJumpState.gd" id="10_jej6c"]
[ext_resource type="PackedScene" uid="uid://b5hlh3rl7ptxj" path="res://assets/player/kitsune/kitsune.tscn" id="13_a8ls1"]
[ext_resource type="PackedScene" uid="uid://dndic7qflpvkj" path="res://scenes/particles/dj_particle.tscn" id="13_f1ej7"]
[ext_resource type="PackedScene" uid="uid://dkdbenohcq6ch" path="res://assets/player/human/human.tscn" id="14_oprun"]
[ext_resource type="PackedScene" uid="uid://cml181jpmjs77" path="res://scenes/particles/particlesmorph.tscn" id="17_qfm1y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qlg0r"]
radius = 0.3
height = 1.25

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_g2els")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_qhqgy")
current_form = 0

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("3_tuyoq")
metadata/_custom_type_script = "uid://c10trtjcqrrl5"

[node name="JumpingState" type="Node" parent="StateMachine"]
script = ExtResource("4_smehm")
metadata/_custom_type_script = "uid://ce74eo32vvbgb"

[node name="MovingState" type="Node" parent="StateMachine"]
script = ExtResource("5_ur7pv")
metadata/_custom_type_script = "uid://cy8bt5yaela0k"

[node name="FallingState" type="Node" parent="StateMachine"]
script = ExtResource("6_ur7pv")
metadata/_custom_type_script = "uid://ctq5bg5yveiv"

[node name="DashingState" type="Node" parent="StateMachine"]
script = ExtResource("7_y4r1p")
metadata/_custom_type_script = "uid://dij83j8t62cge"

[node name="SprintingState" type="Node" parent="StateMachine"]
script = ExtResource("8_d2wvv")
metadata/_custom_type_script = "uid://7pg2wf203o5n"

[node name="SwappingState" type="Node" parent="StateMachine"]
script = ExtResource("9_3v2ag")
metadata/_custom_type_script = "uid://cepkc74a3tp5y"

[node name="DoubleJumpState" type="Node" parent="StateMachine"]
script = ExtResource("10_jej6c")
metadata/_custom_type_script = "uid://ulp3c2r8ekfd"

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("2_g2els")

[node name="Kitsune" type="Node3D" parent="."]
script = ExtResource("4_dqkch")

[node name="KitsuneVisuals" type="Node3D" parent="Kitsune"]

[node name="lp_fox" parent="Kitsune/KitsuneVisuals" instance=ExtResource("13_a8ls1")]
transform = Transform3D(-0.240216, 0, 2.10004e-08, 0, 0.240216, 0, -2.10004e-08, 0, -0.240216, 0, 0, 0)

[node name="AnimationPlayer" parent="Kitsune/KitsuneVisuals/lp_fox" index="1"]
speed_scale = 2.0

[node name="KitsuneCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource("CapsuleShape3D_qlg0r")

[node name="Human" type="Node3D" parent="."]
script = ExtResource("5_qlg0r")

[node name="HumanVisuals" type="Node3D" parent="Human"]

[node name="human" parent="Human/HumanVisuals" instance=ExtResource("14_oprun")]
transform = Transform3D(-1.86376, 0, -1.62935e-07, 0, 1.86376, 0, 1.62935e-07, 0, -1.86376, 0, 0, 0)

[node name="Skeleton3D" parent="Human/HumanVisuals/human/idle" index="0"]
bones/0/position = Vector3(0, 0.344072, -56.7175)
bones/0/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/1/rotation = Quaternion(-0.0732927, 0, 0, 0.99731)
bones/2/rotation = Quaternion(1.08033e-07, 0, 0, 1)
bones/3/rotation = Quaternion(-6.33299e-08, 0, 0, 1)
bones/4/rotation = Quaternion(0.0732927, 0, 0, 0.99731)
bones/5/rotation = Quaternion(0, 0, 0, 1)
bones/7/rotation = Quaternion(-0.59016, -0.34726, 0.658219, -0.312841)
bones/8/position = Vector3(0, 8.9903, 7.03335e-06)
bones/8/rotation = Quaternion(0.250859, 0.067122, -0.0174387, 0.965536)
bones/9/rotation = Quaternion(0.057141, 0.00798626, 0.138201, 0.988722)
bones/11/rotation = Quaternion(0.594, -0.344973, 0.655272, 0.314286)
bones/12/position = Vector3(7.15256e-07, 8.99031, -1.49012e-06)
bones/12/rotation = Quaternion(0.250993, -0.0605944, 0.0157446, 0.965962)
bones/13/position = Vector3(-4.14904e-07, 10.4942, -2.92063e-06)
bones/13/rotation = Quaternion(0.0572064, -0.00744831, -0.128887, 0.98998)
bones/15/rotation = Quaternion(-0.00156068, -0.0255831, 0.997817, -0.0608715)
bones/16/rotation = Quaternion(-0.0611525, -5.90433e-05, 0.000987193, 0.998128)
bones/17/rotation = Quaternion(0.618448, 0.0792172, -0.0628668, 0.779291)
bones/18/rotation = Quaternion(0.239681, 0.0746736, -0.0184934, 0.967799)
bones/20/rotation = Quaternion(0.00160475, -0.0263044, 0.997798, 0.0608659)
bones/21/rotation = Quaternion(-0.0717495, 6.48303e-05, -0.000905818, 0.997422)
bones/22/position = Vector3(-1.17719e-06, 22.6421, -3.42727e-07)
bones/22/rotation = Quaternion(0.635678, -0.0729674, 0.0605446, 0.766109)
bones/23/rotation = Quaternion(0.229808, -0.0911464, 0.0216226, 0.968717)

[node name="AnimationPlayer" parent="Human/HumanVisuals/human" index="1"]
movie_quit_on_finish = true

[node name="HumanCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_qhqgy")

[node name="CameraPivotYaw" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47193, 0)

[node name="CameraPivotPitch" type="Node3D" parent="CameraPivotYaw"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivotYaw/CameraPivotPitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00559831, 0.00576496, 0.515738)
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="CameraPivotYaw/CameraPivotPitch/SpringArm3D"]
fov = 90.0

[node name="DJ_PARTICLE" parent="." instance=ExtResource("13_f1ej7")]
emitting = false
amount = 10

[node name="morphpart" parent="." instance=ExtResource("17_qfm1y")]

[editable path="Kitsune/KitsuneVisuals/lp_fox"]
[editable path="Human/HumanVisuals/human"]
